# physics-engine

./: CMakeLists.txt  assert.h  main.cpp  types.h
Collisions/: collisions.cpp  collisions.h
Constants/: constants.cpp  constants.h
Engine/: engine.cpp  engine.h
GUI/MainWindow/: main_window.cpp  main_window.h
GUI/View/: view.cpp  view.h
Geometry/Circle/: circle.cpp  circle.h
Geometry/Line/: line.cpp  line.h
Geometry/Point/: point.cpp  point.h
Geometry/Polygon/: polygon.cpp  polygon.h
Geometry/Segment/: segment.cpp  segment.h
Math/: math.cpp  math.h
Painter/: painter.cpp  painter.h
PhysicsObject/: physics_object.cpp  physics_object.h
PhysicsObject/CircleObject/: circle_object.cpp  circle_object.h
PhysicsObject/PolygonObject/: polygon_object.cpp  polygon_object.h
PhysicsObject/RectangleObject/: rectangle_object.cpp  rectangle_object.h
PhysicsObject/StaticObject/: StaticObject.h
